crates/canvas-cli/tests/e2e/snapshots/submission_verify_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
verify verified_body  receipt=00000000-0000-4000-8000-00000000000r  attempt=1  attribution=observed
body ok  expected=8f7f27cedc8acf48084063da78451ae9962da2446289983c782736f78476b683  actual=8f7f27cedc8acf48084063da78451ae9962da2446289983c782736f78476b683
--- stderr ---
